tests/baselines/reference/parserES5SymbolProperty1.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts(2,6): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts (1 errors) ====
    interface I {
        [Symbol.iterator]: string;
         ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.
    }